<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.thomasdarimont.keycloak</groupId>
    <artifactId>keycloak-project-example</artifactId>
    <packaging>pom</packaging>
    <version>${revision}.${changelist}</version>
    <name>${project.organization.name} Keycloak Project</name>

    <modules>
        <module>keycloak/extensions</module>
        <module>keycloak/docker</module>
        <module>apps/backend-api-quarkus</module>
        <module>apps/backend-api-springboot</module>
        <module>apps/backend-api-springboot-reactive</module>
        <module>apps/backend-api-springboot3</module>
<!--        <module>apps/backend-api-micronaut</module>-->
        <module>apps/offline-session-client</module>
        <module>apps/spring-boot-device-flow-client</module>
        <module>apps/frontend-webapp-springboot</module>
        <module>apps/frontend-webapp-springboot3</module>
        <module>apps/bff-springboot</module>
        <module>apps/bff-springboot3</module>
        <module>apps/jwt-client-authentication</module>
        <!--        <module>keycloak/patches/keycloak-model-infinispan-patch</module>-->
<!--        <module>keycloak/patches/wildfly-clustering-infinispan-extension-patch-25.0.x</module>-->
<!--        <module>keycloak/patches/wildfly-clustering-infinispan-extension-patch-26.0.x</module>-->
    </modules>

    <organization>
        <name>Acme</name>
    </organization>

    <properties>
        <!-- general settings -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- Docker Image -->
        <docker.image>acme/acme-keycloak</docker.image>
        <docker.file>keycloakx/Dockerfile.plain</docker.file>

        <!-- Keycloak -->
        <keycloak.version>24.0.1</keycloak.version>

        <!-- Parameterizable Project Versions -->
        <revision>1.0.0</revision>
        <changelist>0-SNAPSHOT</changelist>

        <!-- Dependencies for extensions -->
        <freemarker.version>2.3.32</freemarker.version>

        <!-- Testing -->
        <junit-jupiter.version>5.9.2</junit-jupiter.version>
        <assertj-core.version>3.24.2</assertj-core.version>
        <resteasy.version>6.2.7.Final</resteasy.version>
        <testcontainers-keycloak.version>3.3.0</testcontainers-keycloak.version>

        <!-- Tooling -->
        <auto-service.version>1.1.1</auto-service.version>
        <lombok.version>1.18.30</lombok.version>
        <docker-maven-plugin.version>0.43.4</docker-maven-plugin.version>
        <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>
        </plugins>
    </build>
</project>